@@ -1,4 +1,4 @@
-/* $Id: thumbnail.c,v 1.13 2009-01-22 20:53:07 fwarmerdam Exp $ */
+/* $Id: thumbnail.c,v 1.14 2009-01-22 21:12:45 fwarmerdam Exp $ */
 
 /*
  * Copyright (c) 1994-1997 Sam Leffler
@@ -291,13 +291,13 @@ cpStrips(TIFF* in, TIFF* out)
 	TIFFGetField(in, TIFFTAG_STRIPBYTECOUNTS, &bytecounts);
 	for (s = 0; s < ns; s++) {
 	  if (bytecounts[s] > (uint64) bufsize) {
-		buf = (unsigned char *)_TIFFrealloc(buf, bytecounts[s]);
+		buf = (unsigned char *)_TIFFrealloc(buf, (tmsize_t)bytecounts[s]);
 		if (!buf)
 		    goto bad;
-		bufsize = bytecounts[s];
+		bufsize = (tmsize_t)bytecounts[s];
 	    }
-	    if (TIFFReadRawStrip(in, s, buf, bytecounts[s]) < 0 ||
-		TIFFWriteRawStrip(out, s, buf, bytecounts[s]) < 0) {
+	    if (TIFFReadRawStrip(in, s, buf, (tmsize_t)bytecounts[s]) < 0 ||
+		TIFFWriteRawStrip(out, s, buf, (tmsize_t)bytecounts[s]) < 0) {
 		_TIFFfree(buf);
 		return 0;
 	    }
@@ -325,13 +325,13 @@ cpTiles(TIFF* in, TIFF* out)
 	TIFFGetField(in, TIFFTAG_TILEBYTECOUNTS, &bytecounts);
 	for (t = 0; t < nt; t++) {
 	    if (bytecounts[t] > (uint64) bufsize) {
-		buf = (unsigned char *)_TIFFrealloc(buf, bytecounts[t]);
+		buf = (unsigned char *)_TIFFrealloc(buf, (tmsize_t)bytecounts[t]);
 		if (!buf)
 		    goto bad;
-		bufsize = bytecounts[t];
+		bufsize = (tmsize_t)bytecounts[t];
 	    }
-	    if (TIFFReadRawTile(in, t, buf, bytecounts[t]) < 0 ||
-		TIFFWriteRawTile(out, t, buf, bytecounts[t]) < 0) {
+	    if (TIFFReadRawTile(in, t, buf, (tmsize_t)bytecounts[t]) < 0 ||
+		TIFFWriteRawTile(out, t, buf, (tmsize_t)bytecounts[t]) < 0) {
 		_TIFFfree(buf);
 		return 0;
 	    }
